plugins {
    java
    id("org.springframework.boot") version "3.5.7"
    id("io.spring.dependency-management") version "1.1.7"
}

group = "run.prizm"
version = "1.0"
description = "core"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
    developmentOnly("org.springframework.boot:spring-boot-devtools")

    implementation("me.paulschwarz:spring-dotenv:4.0.0")

    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")

    implementation("com.github.f4b6a3:uuid-creator:5.3.5")
    implementation("org.springframework.boot:spring-boot-starter-data-redis")

    implementation("io.minio:minio:8.5.7")

    runtimeOnly("org.postgresql:postgresql")

    compileOnly("org.projectlombok:lombok")
            annotationProcessor("org.projectlombok:lombok")
        }
        
